# tugas-robotika

./: README.md
behaviour/: CMakeLists.txt  package.xml
behaviour/include/behaviour/: behaviour.h
controller/: CMakeLists.txt  package.xml
controller/include/controller/: controller.h
controller/src/: controller.cpp  controller_node.cpp
data/: config.yaml
kinematics/: CMakeLists.txt  package.xml
kinematics/include/kinematics/: kinematics.h  robot_data.h
kinematics/src/: kinematics.cpp
kinematics_2/: CMakeLists.txt  kinematics_node.cpp  package.xml
kinematics_2/include/: kinematics.h
kinematics_2/src/: kinematics.cpp
messages/Odometry/: CMakeLists.txt  package.xml
messages/Odometry/msg/: odometry.msg
msgs/: CMakeLists.txt  package.xml
msgs/msg/: GridMapData.msg  MotorVel.msg  Odometry.msg  Path.msg  PlannerInput.msg  Quadratic.msg  QuadraticSpline.msg  VertexData.msg  VerticeData.msg
odometry/: CMakeLists.txt  odometry_node.cpp  package.xml
odometry/include/: odometry.h
odometry/include/odometry/: odometry.h
odometry/launch/: odometry.launch
odometry/src/: odometry.cpp  odometry_node.cpp
odometry_2/: CMakeLists.txt  package.xml
odometry_2/include/: odometry.h
path_planning/: CMakeLists.txt  package.xml
path_planning/include/path_planning/: dijkstra.h  ogm.h  path_planning.h  solver.h
path_planning/src/: dijkstra.cpp  ogm.cpp  path_planning.cpp  path_planning_node.cpp  solver.cpp
path_planning_monitor/: CMakeLists.txt  package.xml
path_planning_monitor/gui/: dark_style_lintang.qss
path_planning_monitor/include/path_planning_monitor/: fixed_map.h  mainwindow.h  ogmview.h  trajectory_viewer.h
path_planning_monitor/launch/: path_planning_monitor.launch
path_planning_monitor/map/: test.map  test2.map
path_planning_monitor/src/: main.cpp  mainwindow.cpp  ogmview.cpp  trajectory_viewer.cpp
test/: CMakeLists.txt  package.xml
test/include/test/: test.h
test/launch/: test.launch
test/src/: test.cpp
trajectory_generator/: CMakeLists.txt  package.xml
trajectory_generator/include/trajectory_generator/: gauss_seidel.h  spline.h  trajectory_generator.h
trajectory_generator/src/: gauss_seidel.cpp  spline.cpp  trajectory_generator.cpp  trajectory_generator_node.cpp
vrep_scene/: tugas_1.ttt
