################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 2.8.3)
project(odometry_msgs)

set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
    message_generation
    geometry_msgs
    )

################################################################################
# Declare ROS messages, services and actions
################################################################################
add_message_files(
  FILES
  odometry.msg
)

generate_messages(
  DEPENDENCIES
  geometry_msgs
)

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
    CATKIN_DEPENDS message_runtime geometry_msgs
    )

################################################################################
# Build
################################################################################

################################################################################
# Install
################################################################################

################################################################################
# Test
################################################################################
